Finish Advancement criterion Codecs
Should compile.
These will demand changes later.
Mainly since the fields are not optional by-default,
it needs a pass to make sure they work as expected.
This is also important due to vanilla serializers being used,
and they might change up the advancement criteria.
There are also a couple of match methods which I am unsure how they should behave.